# VeilArmor

./: .dockerignore  .env  .env.example  .gitignore  CHECK.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_GUIDE.md  LICENSE  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_INSTALL.md  README.md  README_COMPLETE.md  STARTUP_GUIDE.md  VIGIL_INTEGRATION_SUCCESS.md  demo_complete.py  docker-compose.yml  gitignore.txt  main.py  pyproject.toml  pytest.ini  remove_emojis.py  requirements-docker.txt  requirements.txt  setup.ps1  start_chatbot.ps1  test_complete_integration.py  test_real_api.py  test_results.json  test_trivy_real.py
.github/workflows/: security-pipeline.yml
chatbot/: .env.example  Dockerfile  README.md  app.py  app_no_security.py  app_secure.py  app_unsecure.py  requirements.txt  security_client.py
config/: gemini.conf  openai.conf  server.conf  settings.yaml
data/yara_rules/: comprehensive_attacks.yar
deploy/: prometheus.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  rbac.yaml  redis.yaml  service.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md
examples/: api_client_example.py  basic_usage.py  classification_example.py  custom_pipeline.py  gemini_integration.py  llm_providers.py  openai_integration.py  sanitization_example.py  vigil_integration_example.py
kubernetes/: deployment.yaml
scripts/: cli.py  docker.sh  git-commit-v2.sh  k8s.sh  load_datasets.py  setup.sh  test_scanner.py
src/: __init__.py  server.py
src/api/: __init__.py  middleware.py  models.py  routes.py  server.py
src/cache/: __init__.py  backends.py  embeddings.py  semantic_cache.py
src/classifier/: __init__.py  base.py  patterns.py  threat_classifier.py
src/classifiers/: __init__.py  base.py  manager.py
src/classifiers/input/: __init__.py  adversarial_attack.py  jailbreak.py  pii_detector.py  prompt_injection.py  sensitive_content.py  system_prompt_leak.py  toxicity.py
src/classifiers/output/: __init__.py  bias_detector.py  content_safety.py  hallucination.py  injection_check.py  pii_leakage.py
src/config/: __init__.py  settings.py
src/conversation/: __init__.py  context.py  manager.py  storage.py
src/core/: __init__.py  config.py  pipeline.py
src/decision/: __init__.py  decision_engine.py  rules.py  scorer.py  thresholds.py
src/llm/: __init__.py  base.py  dummy_llm.py  gateway.py  providers.py
src/logging/: __init__.py  config.py  correlation.py  metrics.py
src/logging/formatters/: __init__.py  colored_formatter.py  json_formatter.py
src/logging/handlers/: __init__.py  file.py  json.py  stream.py
src/modal_armor/: __init__.py  core.py  models.py
src/modal_armor/api/: server.py
src/modal_armor/middleware/: __init__.py
src/modal_armor/scanners/: base.py  manager.py  sentiment.py  vectordb.py  yara_scanner.py
src/modal_armor/security/: trivy_scanner.py
src/modal_armor/utils/: logger.py
src/processing/: __init__.py  normalizer.py  preprocessor.py  processor.py  validator.py
src/sanitization/: __init__.py  base.py  input_sanitizer.py  manager.py  output_sanitizer.py  strategies.py
src/sanitizer/: __init__.py  base.py  input_sanitizer.py  output_sanitizer.py
src/utils/: __init__.py  exceptions.py  helpers.py  logger.py
src/validation/: __init__.py  engine.py  rules.py  validators.py
src/veil_armor/: __init__.py  canary.py  core.py  models.py
src/veil_armor/api/: server.py
src/veil_armor/middleware/: __init__.py  output_sanitizer.py  proactive_security.py  rate_limiter.py
src/veil_armor/scanners/: __init__.py  abusive_scanner.py  encoding_scanner.py  hallucination_scanner.py  manager.py  output_injection_scanner.py  pii_scanner.py  similarity.py  transformer.py  vectordb.py
src/veil_armor/security/: enterprise_vector_security.py  trivy_scanner.py
src/veil_armor/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_classifier.py  test_gemini_connection.py  test_pipeline.py  test_results.json  test_results_20251224_020517.json  test_results_20251224_022638.json  test_sanitizer.py  test_veil_armor_attacks.py  test_vigil_integration.py  test_zero_day_attacks.py
